# policy-opportunity-agent

./: .env.example  .gitignore  README.md  pyproject.toml
config/: rules.yml  sources.yml
docs/: app.js  index.html  styles.css
docs/data/: changes.json  events.json  heartbeat.json  manifest.json  opportunities.json  source-status.json
scripts/: bootstrap-pi.sh  configure-github-key.sh  install-systemd.sh  run-once.sh
src/policy_agent/: __init__.py  classify.py  cli.py  config.py  git_publish.py  http.py  lock.py  models.py  opportunities.py  pipeline.py  utils.py
src/policy_agent/collectors/: base.py  bc_eao.py  bc_laws.py  bc_legislature.py  bc_orders.py  bcuc.py  bcuc_anticipated_pdf.py  common.py  consultations.py  federal_regulatory_plans.py  house_reports.py  html_date_list.py  iaac.py  json_feed.py  page_watch.py  parliament.py  policy_signal_utils.py  registry.py  rss.py  statcan.py
systemd/: policy-opportunity-agent.service  policy-opportunity-agent.timer
tests/: conftest.py  test_collectors.py  test_config.py  test_opportunities.py  test_page_watch.py  test_pipeline.py  test_policy_signal_collectors.py
tests/fixtures/: bc_laws.html  bcuc_anticipated.html  bcuc_deadlines.html  bcuc_proceeding.html  boc_upcoming.xml  consultations.csv  elections_finance.html  page_watch_v1.html  page_watch_v2.html  statcan_schedule.json
